# universal-gateway

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  INSTALL.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  TERMS.md  cli_approver.py  debug_playwright.py  docker-compose.prod.yml  docker-compose.yml  firestore.rules  mcp_client_test.py  out.html  package-lock.json  package.json  pyproject.toml  recaptcha_manager.py  server.py  test_capsolver_flow.py  utg_setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-assign.yml  codeql.yml  contract-assertions.yml  (+4 more)
artifacts/: gateway.key  gateway.key.pub
contracts/: README.md  foundry.toml
dataconnect/: dataconnect.yaml  seed_data.gql
docs_site/: index.html  style.css  vercel.json
functions/: package-lock.json  package.json
marketing_materials/: 01_BRAND_NARRATIVE.md  02_RELEASE_CHANGELOG.md  03_BLOG_POST_LAUNCH.md  04_BLOG_POST_TECHNICAL.md
observers/: Cargo.toml  README.md
observers/crates/chain-observer/: Cargo.toml
observers/crates/chain-observer/src/: main.rs
scripts/: assert_public_contract.py  deploy_do.sh  showcase_wow.py  verify_utg_gaas.py
tests/: conftest.py  mcp_client_test.py  test_alvins_alicia_a2a.py  test_ephemeral_purge.py  test_final_look_slippage.py  test_gateway_public_contract.py  test_hitl_regressions.py  test_idempotency_locking.py  test_improvements.py  test_reliability_guards.py  test_safety_sandwich.py  test_security_hardening.py
(+100 files in other folders)
